@@ -16,6 +16,8 @@
 
 package org.forgerock.openidm.security.impl;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.forgerock.json.test.assertj.AssertJJsonValueAssert.assertThat;
 import static org.forgerock.json.resource.test.assertj.AssertJActionResponseAssert.assertThat;
 
 import org.apache.commons.lang3.StringUtils;
@@ -32,13 +34,12 @@ import org.forgerock.openidm.repo.RepositoryService;
 import org.forgerock.openidm.security.KeyStoreHandler;
 import org.forgerock.openidm.security.KeyStoreManager;
 import org.forgerock.openidm.util.DateUtil;
+import org.forgerock.util.encode.Base64;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
-import sun.misc.BASE64Encoder;
-import sun.security.provider.X509Factory;
 
 import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.TrustManagerFactory;
@@ -55,11 +56,13 @@ import java.security.cert.CertificateEncodingException;
 import java.util.HashMap;
 import java.util.Map;
 
-import static org.fest.assertions.api.Assertions.assertThat;
 import static org.forgerock.json.resource.Router.uriTemplate;
 import static org.mockito.Mockito.mock;
 
 public class KeystoreResourceProviderTest {
+
+    public static final String BEGIN_CERT = "-----BEGIN CERTIFICATE-----";
+    public static final String END_CERT = "-----END CERTIFICATE-----";
 
     private final Router router = new Router();
     private final Connection connection = Resources.newInternalConnection(router);
@@ -141,7 +144,7 @@ public class KeystoreResourceProviderTest {
             UnrecoverableEntryException, NoSuchAlgorithmException {
         //given
         ActionRequest actionRequest =
-                Requests.newActionRequest(KEYSTORE_ROUTE, keystoreResourceProvider.ACTION_GENERATE_CERT);
+                Requests.newActionRequest(KEYSTORE_ROUTE, KeystoreResourceProvider.ACTION_GENERATE_CERT);
         actionRequest.setContent(createGenerateCertActionContent(true));
 
         //when
@@ -159,7 +162,7 @@ public class KeystoreResourceProviderTest {
             UnrecoverableEntryException, KeyStoreException {
         //given
         ActionRequest actionRequest =
-                Requests.newActionRequest(KEYSTORE_ROUTE, keystoreResourceProvider.ACTION_GENERATE_CERT);
+                Requests.newActionRequest(KEYSTORE_ROUTE, KeystoreResourceProvider.ACTION_GENERATE_CERT);
         actionRequest.setContent(createGenerateCertActionContent(true));
 
         //when
@@ -177,7 +180,7 @@ public class KeystoreResourceProviderTest {
             UnrecoverableEntryException, NoSuchAlgorithmException {
         //given
         ActionRequest actionRequest =
-                Requests.newActionRequest(KEYSTORE_ROUTE, keystoreResourceProvider.ACTION_GENERATE_CERT);
+                Requests.newActionRequest(KEYSTORE_ROUTE, KeystoreResourceProvider.ACTION_GENERATE_CERT);
         final JsonValue content = createGenerateCertActionContent(true);
         content.remove("alias");
         actionRequest.setContent(content);
@@ -192,7 +195,7 @@ public class KeystoreResourceProviderTest {
             UnrecoverableEntryException, NoSuchAlgorithmException {
         //given
         ActionRequest actionRequest =
-                Requests.newActionRequest(KEYSTORE_ROUTE, keystoreResourceProvider.ACTION_GENERATE_CERT);
+                Requests.newActionRequest(KEYSTORE_ROUTE, KeystoreResourceProvider.ACTION_GENERATE_CERT);
         actionRequest.setContent(createGenerateCertActionContent(true));
 
         //when
@@ -204,9 +207,9 @@ public class KeystoreResourceProviderTest {
         final DateUtil dateUtil = DateUtil.getDateUtil();
         final Map<String,Object> content = new HashMap<>();
         content.put("alias", TEST_CERT_ALIAS);
-        content.put("algorithm", keystoreResourceProvider.DEFAULT_ALGORITHM);
-        content.put("signatureAlgorithm", keystoreResourceProvider.DEFAULT_SIGNATURE_ALGORITHM);
-        content.put("keySize", keystoreResourceProvider.DEFAULT_KEY_SIZE);
+        content.put("algorithm", KeystoreResourceProvider.DEFAULT_ALGORITHM);
+        content.put("signatureAlgorithm", KeystoreResourceProvider.DEFAULT_SIGNATURE_ALGORITHM);
+        content.put("keySize", KeystoreResourceProvider.DEFAULT_KEY_SIZE);
         content.put("domainName","domainName");
         content.put("validFrom", dateUtil.now());
         content.put("validTo", dateUtil.parseIfDate(dateUtil.currentDateTime().plusDays(1).toDate().toString()));
@@ -215,11 +218,11 @@ public class KeystoreResourceProviderTest {
     }
 
     private void checkResultForRequiredFields(final JsonValue result) {
-        assertThat(result != null && !result.isNull());
-        assertThat(!result.get("_id").isNull());
-        assertThat(!result.get("type").isNull());
-        assertThat(!result.get("cert").isNull());
-        assertThat(!result.get("publicKey").isNull());
+        assertThat(result).isNotNull();
+        assertThat(result).hasString("_id");
+        assertThat(result).hasString("type");
+        assertThat(result).hasString("cert");
+        assertThat(result).hasObject("publicKey");
     }
 
     private void checkKeyStoreEntry(final JsonValue result)
@@ -229,7 +232,7 @@ public class KeystoreResourceProviderTest {
                 (KeyStore.PrivateKeyEntry) keyStoreHandler
                         .getStore()
                         .getEntry(TEST_CERT_ALIAS, new KeyStore.PasswordProtection(KEYSTORE_PASSWORD.toCharArray()));
-        assertThat(privateKeyEntry != null);
+        assertThat(privateKeyEntry).isNotNull();
 
         Certificate certificate = privateKeyEntry.getCertificate();
         assertThat(certificate != null);
@@ -244,10 +247,9 @@ public class KeystoreResourceProviderTest {
 
     private String convertCertToPEM(final byte[] encodedCert) {
         final StringBuilder certAsPEM = new StringBuilder();
-        final BASE64Encoder encoder = new BASE64Encoder();
-        certAsPEM.append(X509Factory.BEGIN_CERT)
-                .append(new String (encoder.encodeBuffer(encodedCert)))
-                .append(X509Factory.END_CERT);
+        certAsPEM.append(BEGIN_CERT)
+                .append(Base64.encode(encodedCert))
+                .append(END_CERT);
         return  certAsPEM.toString();
     }
 }
